sử dụng repo https://github.com/towhee-io/towhee

--- a/HCMUS_NLPS.ipynb
+++ b/HCMUS_NLPS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPtkTgjOK/LyrnTKyXbzSgm",
+      "authorship_tag": "ABX9TyP0+lvi8/rE8DPUARzT5lE+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,60 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "6bFcDWfht_4F"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bFcDWfht_4F",
+        "outputId": "d4fd6150-8701-4253-b4e7-81a8206cd833"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting towhee\n",
+            "  Downloading towhee-0.8.1-py3-none-any.whl (301 kB)\n",
+            "\u001b[K     |████████████████████████████████| 301 kB 14.8 MB/s \n",
+            "\u001b[?25hCollecting towhee.models\n",
+            "  Downloading towhee.models-0.8.1-py3-none-any.whl (1.8 MB)\n",
+            "\u001b[K     |████████████████████████████████| 1.8 MB 51.5 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: tabulate in /usr/local/lib/python3.7/dist-packages (from towhee) (0.8.10)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.7/dist-packages (from towhee) (1.21.6)\n",
+            "Requirement already satisfied: pyarrow in /usr/local/lib/python3.7/dist-packages (from towhee) (6.0.1)\n",
+            "Collecting pgzip\n",
+            "  Downloading pgzip-0.3.2-py3-none-any.whl (12 kB)\n",
+            "Requirement already satisfied: tqdm>=4.59.0 in /usr/local/lib/python3.7/dist-packages (from towhee) (4.64.1)\n",
+            "Collecting pygit2\n",
+            "  Downloading pygit2-1.10.1-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.5 MB)\n",
+            "\u001b[K     |████████████████████████████████| 4.5 MB 52.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests>=2.12.5 in /usr/local/lib/python3.7/dist-packages (from towhee) (2.23.0)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests>=2.12.5->towhee) (2022.9.24)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests>=2.12.5->towhee) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests>=2.12.5->towhee) (1.24.3)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests>=2.12.5->towhee) (2.10)\n",
+            "Requirement already satisfied: cffi>=1.9.1 in /usr/local/lib/python3.7/dist-packages (from pygit2->towhee) (1.15.1)\n",
+            "Requirement already satisfied: cached-property in /usr/local/lib/python3.7/dist-packages (from pygit2->towhee) (1.5.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.7/dist-packages (from cffi>=1.9.1->pygit2->towhee) (2.21)\n",
+            "Installing collected packages: pygit2, pgzip, towhee.models, towhee\n",
+            "Successfully installed pgzip-0.3.2 pygit2-1.10.1 towhee-0.8.1 towhee.models-0.8.1\n"
+          ]
+        }
+      ],
+      "source": [
+        "pip install towhee towhee.models"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wFAiErZ4uzTj"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
