Được tạo bằng Colaboratory

--- a/HCMUS_NLPS.ipynb
+++ b/HCMUS_NLPS.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/TranPhu1999/HCMUS-NLPS-AIChallenge/blob/Phu/HCMUS_NLPS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/TranPhu1999/HCMUS-NLPS-AIChallenge/blob/main/HCMUS_NLPS.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -1320,7 +1320,8 @@
       ],
       "source": [
         "import numpy as np\n",
-        "# Use this link if it's still available to check the queries results \n",
+        "# Use this link if it's still available to check the queries results\n",
+        "# Link: http://128.199.178.135:4567/?fbclid=IwAR0rtcLToubngq62z765Ee-gp-2Wxl_BEp-cASrUkEo1ujn7ZnZLjoRFRXE\n",
         "# put your rank of the 10 queries here\n",
         "#----------------------------------------\n",
         "rank = [18,5,1,1,2,33,101,63,1,13]\n",
